--- a/temerty.html
+++ b/temerty.html
@@ -72,7 +72,7 @@
   <p><strong>PI:</strong> <a href="https://www.camh.ca/en/science-and-research/science-and-research-staff-directory/danielblumberger">Dr. Daniel Blumberger</a><br>
 <strong>Institution:</strong> Centre for Addiction and Mental Health (CAMH)</p>
 <p>I currently work at the <a href="https://www.camh.ca/en/science-and-research/institutes-and-centres/temerty-centre-for-therapeutic-brain-intervention">Temerty Centre for Therapeutic Brain Stimulation</a>. A focus of my role is performing recruitment and assessment of patients in clinical trials that evaluate repetitive transcranial magnetic stimulation as a treatment for depression and other disorders.</p>
-<p>Read more at my CV <a href="https://drive.google.com/file/d/1hwLJ0-uqlN7IWp9VEfGy0NXGmxSjY5F9/view?usp=sharing">here</a>.</p>
+<p>Read more at my CV <a href="https://drive.google.com/file/d/1ByFK3xUdTIa3CUw2GU2IIYdd_y-21WVN/view?usp=drive_link">here</a>.</p>
 
 </div>
 
