--- a/ebl.html
+++ b/ebl.html
@@ -72,7 +72,7 @@
   <p><strong>PI:</strong> <a href="https://arts.ucalgary.ca/psychology/contact/psychology-directory/full-time-faculty/profiles/kristin-m-von-ranson">Dr. Kristin von Ranson</a><br>
 <strong>Institution:</strong> University of Calgary</p>
 <p>I was a student at the <a href="https://www.ucalgary.ca/labs/eating-behaviours/eating-behaviours">Eating Behaviours Lab</a> from 2020 to my graduation in spring 2023. I&rsquo;m still helping out at the lab all the way from Toronto, as I currently run participant recruitment and data collection for a lab member&rsquo;s doctoral dissertation!</p>
-<p>Read more at my CV <a href="https://drive.google.com/file/d/1ByFK3xUdTIa3CUw2GU2IIYdd_y-21WVN/view?usp=drive_link">here</a>.</p>
+<p>Read more at my CV <a href="https://drive.google.com/file/d/1KIgfvYJUsktwwG-tWGXzS6SFS2d2_6So/view?usp=sharing">here</a>.</p>
 
 </div>
 
