--- a/ebl.html
+++ b/ebl.html
@@ -61,7 +61,7 @@
         
         <div class="split-intro">
   <h1>Eating Behaviours Lab</h1>
-  <h2 class="tagline">RA &amp; Honours Student</h2>
+  <h2 class="tagline">Research Assistant &amp; Honours Student</h2>
 </div>
 
 
@@ -72,7 +72,7 @@
   <p><strong>PI:</strong> <a href="https://arts.ucalgary.ca/psychology/contact/psychology-directory/full-time-faculty/profiles/kristin-m-von-ranson">Dr. Kristin von Ranson</a><br>
 <strong>Institution:</strong> University of Calgary</p>
 <p>I was a student at the <a href="https://www.ucalgary.ca/labs/eating-behaviours/eating-behaviours">Eating Behaviours Lab</a> from 2020 to my graduation in spring 2023. I&rsquo;m still helping out at the lab all the way from Toronto, as I currently run participant recruitment and data collection for a lab member&rsquo;s doctoral dissertation!</p>
-<p>Read more at my CV <a href="https://drive.google.com/file/d/1KIgfvYJUsktwwG-tWGXzS6SFS2d2_6So/view?usp=sharing">here</a>.</p>
+<p>Read more at my CV <a href="https://drive.google.com/file/d/1B7Gn43TnfMPTGM4CCL0VE2Sac_tnOzFw/view?usp=sharing">here</a>.</p>
 
 </div>
 
@@ -80,7 +80,7 @@
 
         
         <div class="split-credit">
-  <p>&copy;2023 Cynthia Gan - <a href="https://onepagelove.com/split" title="Split Template">Split Template</a> by <a href="https://onepagelove.com" title="One Page Love">One Page Love</a></p>
+  <p>&copy;2024 Cynthia Gan - <a href="https://onepagelove.com/split" title="Split Template">Split Template</a> by <a href="https://onepagelove.com" title="One Page Love">One Page Love</a></p>
 
   <!--
   To edit this credit you can remove the CC3.0 license for only $5 here: https://onepagelove.com/split
