--- a/temerty.html
+++ b/temerty.html
@@ -71,8 +71,8 @@
           <div class="split-bio">
   <p><strong>PI:</strong> <a href="https://www.camh.ca/en/science-and-research/science-and-research-staff-directory/danielblumberger">Dr. Daniel Blumberger</a><br>
 <strong>Institution:</strong> Centre for Addiction and Mental Health (CAMH)</p>
-<p>I currently work at the <a href="https://www.camh.ca/en/science-and-research/institutes-and-centres/temerty-centre-for-therapeutic-brain-intervention">Temerty Centre for Therapeutic Brain Stimulation</a>. A focus of my role is performing recruitment and assessment of patients in clinical trials that evaluate repetitive transcranial magnetic stimulation as a treatment for depression, suicidality, and other disorders.</p>
-<p>Read more at my CV <a href="https://drive.google.com/file/d/1KIgfvYJUsktwwG-tWGXzS6SFS2d2_6So/view?usp=sharing">here</a>.</p>
+<p>I worked at the <a href="https://www.camh.ca/en/science-and-research/institutes-and-centres/temerty-centre-for-therapeutic-brain-intervention">Temerty Centre for Therapeutic Brain Stimulation</a>. A focus of my role was performing recruitment and assessment of patients in clinical trials that evaluated repetitive transcranial magnetic stimulation as a treatment for depression, suicidality, and other disorders.</p>
+<p>Read more at my CV <a href="https://drive.google.com/file/d/1B7Gn43TnfMPTGM4CCL0VE2Sac_tnOzFw/view?usp=sharing">here</a>.</p>
 
 </div>
 
@@ -80,7 +80,7 @@
 
         
         <div class="split-credit">
-  <p>&copy;2023 Cynthia Gan - <a href="https://onepagelove.com/split" title="Split Template">Split Template</a> by <a href="https://onepagelove.com" title="One Page Love">One Page Love</a></p>
+  <p>&copy;2024 Cynthia Gan - <a href="https://onepagelove.com/split" title="Split Template">Split Template</a> by <a href="https://onepagelove.com" title="One Page Love">One Page Love</a></p>
 
   <!--
   To edit this credit you can remove the CC3.0 license for only $5 here: https://onepagelove.com/split
